# Movie-classificator

./: README.md  imdb_nlp_classification.ipynb  pyproject.toml
